--- a/src/style.css
+++ b/src/style.css
@@ -73,23 +73,25 @@ body {
     height: 400px;
     padding: 20px  10px 170px; 
     border-radius: 10px;
-    margin-top: 60px;
+    margin-top: 90px;
     margin-left: 350px;
 }
 
 .answer {
     color: rgb(29, 27, 27);
     /* margin-top: px; */
-    margin-bottom: 10px;
-    font-size: 18px;
-    margin-left: 20px;
+    margin-top: 120px;
+    margin-bottom: 50px;
+    font-size: 40px;
+    /* margin-left: 20px; */
     text-align: center;
 }
 
 footer {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 20px;
     color: white;
+    margin-right: 20px;
   } 
 
 .showData {
@@ -144,11 +146,14 @@ border-radius: 25px;
 margin-top: 30px;
 }
 
+
 input, select{
     text-transform: uppercase;
     box-shadow: 0 7px rgba(75, 72, 72, 0.185);
 }
-/* .btnReload {
-    margin-bottom: 100px;
-    margin-top: -1000px;
-} */
+
+.btnReload {
+   align-items: center;
+   margin-left: 70px;
+   height: 70px;
+} 
